<resources>

    <string name="app_name">掌上医院</string>
    <string name="activity_init">数据加载中...</string>
    <string name="activity_init_failure">数据加载失败</string>
    <string name="activity_error">系统异常</string>
    <string name="network_or_connection_error">网络错误，请稍后再试。</string>
    <string name="ani_time">250</string>
    <string name="ani_time2">500</string>
    <string name="ani_timestartof">150</string>
    <string name="head_title_yygh">预约挂号</string>
    <string name="versionname">1.1.0</string>
    <string name="title_login">登陆</string>
    <string name="msg_worker_number_null">员工号不能为空</string>
    <string name="msg_password_null">密码不能为空</string>
    <string name="msg_checknum_null">验证码不能为空</string>
    <string name="msg_hosId">7</string>
    <string name="pat_list">病人列表</string>
    <string name="pat_info">病人详情</string>
    <string name="long_yizhi">长期医嘱</string>
    <string name="short_yizhu">临时医嘱</string>
    <string name="long_yizhu_info">长期医嘱详情</string>
    <string name="short_yizhu_info">临时医嘱详情</string>
    <string name="post_notice">公告通知</string>
    <string name="check_yizhu"> 查看医嘱</string>
    <string name="hospital_report">住院报告</string>
    <string name="hospital_num">住院号:</string>
    <string name="hospital_bed_num">床号:</string>
    <string name="patient_name">姓名:</string>
    <string name="patient_sex">性别:</string>
    <string name="patient_age">年龄:</string>
    <string name="apply_department">申请科室:</string>
    <string name="apply_doctor">申请医生:</string>
    <string name="report_datetime">报告时间:</string>
    <string name="report_doctor">报告医生:</string>
    <string name="check_project">检查项目:</string>    
    <string name="check_finding">检查所见</string>
    <string name="diagnose">诊断:</string>
    <string name="seria_num">流水号:</string>
    <string name="jcxq">检查详情</string>
    <string name="gather">采集:</string>
    <string name="report">报告:</string>
	<string name="all">全部</string>
	<string name="bingli">病理</string>
  	<string name="fangshe">放射</string>
 	<string name="bchao">B超</string>
    <string name="neijing">内镜</string>
    <string name="xindian">心电</string>
    <string name="jcbgjl">检查报告记录</string>
    <string name="jybgjl">检验报告记录</string>
    <string name="bc_zyh">住院号</string>
    <string name="dh">单号:</string>
    <string name="xm">姓名:</string>
    <string name="xb">性别:</string>
    <string name="ks">科室:</string>
    <string name="jyxm">检验项目:</string>
    <string name="yb">样本:</string>
    <string name="cjsj">采集时间:</string>
    <string name="bgsj">报告时间:</string>
    <string name="xiangmu">项目</string>
    <string name="jg">结果</string>
    <string name="ckfw">参考范围</string>
    <string name="dw">单位</string>
    <string name="wjz">危急值</string>
    <string name="mzsm">免责声明\n本结果数据来源医院，请供参考，具体请以医院纸质检验/检查单为准,请及时回院复诊</string>
	<string name="bc_name">姓名</string>
	<string name="bc_sex">性别</string>
	<string name="bc_nl">年龄</string>
	<string name="bc_sqks">申请科室</string>
	<string name="bc_bgsj">报告时间</string>
	<string name="bc_bbys">报告医生</string>
	<string name="bc_jcxm">检查项目</string>
	<string name="bc_lsh">流水号</string>
	<string name="bc_bed">床号</string>
	<string name="bc_sqys">申请医生</string>
	<string name="bc_jcsj">检查所见</string>
	<string name="bc_zd">诊断</string>
	<string name="nj_zyh">住院号</string>
	<string name="nj_name">姓名</string>
	<string name="nj_sex">性别</string>
	<string name="nj_nl">年龄</string>
	<string name="nj_sqks">申请科室</string>
	<string name="nj_sqys">申请医生</string>
	<string name="nj_jcrq">检查日期</string>
	<string name="nj_jcxm">检查项目</string>
	<string name="nj_yqmc">仪器名称</string>
	<string name="nj_zdms">诊断描述</string>
	<string name="nj_njzd">内镜诊断</string>
	<string name="nj_hj">活检</string>
	<string name="nj_jcys">检查医生</string>
	<string name="nj_ysjy">医生建议</string>
	<string name="nj_lsh">流水号</string>
	<string name="fs_clinicId">住院号</string>
	<string name="fs_bedNo">床号</string>
	<string name="fs_name">姓名</string>
	<string name="fs_gender">性别</string>
	<string name="fs_age">年龄</string>
	<string name="fs_deptName">申请科室</string>
	<string name="fs_approvepeople">审核医师</string>
	<string name="fs_registerTime">检查日期</string>
	<string name="fs_approvedate">报告日期</string>
	<string name="fs_examItemName">检查类别</string>
	<string name="fs_examname">检查项目</string>
	<string name="fs_examdesc">影像表现</string>
	<string name="fs_examdiagnosis">诊断</string>
	<string name="fs_checkNumber">流水号</string>
	<string name="xd_zyh">住院号</string>
<string name="xd_name">姓名</string>
<string name="xd_sex">性别</string>
<string name="xd_age">年龄</string>
<string name="xd_sfzh">身份证号</string>
<string name="xd_bed">床号</string>
<string name="xd_lb">类别</string>
<string name="xd_bq">病区</string>
<string name="xd_kdks">开单科室</string>
<string name="xd_jcys">检查医生</string>
<string name="xd_jcrq">检查日期</string>
<string name="xd_bgzt">报告状态</string>
<string name="xd_guid">唯一标示</string>
<string name="xd_jcdl">检查大类</string>
<string name="xd_jcxm">检查项目</string>
<string name="xd_sqdh">申请单号</string>
<string name="xd_zd">诊断</string>
<string name="bl_zyh">住院号</string>
<string name="bl_bed">床号</string>
<string name="bl_name">姓名</string>
<string name="bl_sex">性别</string>
<string name="bl_nl">年龄</string>
<string name="bl_hy">婚姻</string>
<string name="bl_bq">病区</string>
<string name="bl_bgrq">报告日期</string>
<string name="bl_blh">病理号</string>
<string name="bl_bglb">报告类别</string>
<string name="bl_kdks">开单科室</string>
<string name="bl_kdys">开单医生</string>
<string name="bl_kdrq">开单日期  </string>
<string name="bl_bbmc">标本名称</string>
<string name="bl_lczd">临床诊断</string>
<string name="bl_blzd">病理诊断</string>
<string name="bl_bgys">报告医生</string>
<string name="bl_shys">审核医生 </string>
<string name="neixian">外线  :</string>
<string name="waixian">外线  :</string>	
<string name="keshi">科室</string>	
<string name="geren">个人</string>	
<string name="xiangqing">详情</string>
<string name="jxszyyzsyy">嘉兴市中医院掌上医院</string>
<string name="yihuban">医护版</string>
    <string name="temp_test"></string>
    
</resources>