<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/jc_info_titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/layout_head" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="vertical" ><LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_zyh" />

                <TextView
                    android:id="@+id/bl_zyh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bed" />

                <TextView
                    android:id="@+id/bl_bed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_name" />

                <TextView
                    android:id="@+id/bl_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_sex" />

                <TextView
                    android:id="@+id/bl_sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_nl" />

                <TextView
                    android:id="@+id/bl_nl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_hy" />

                <TextView
                    android:id="@+id/bl_hy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bq" />

                <TextView
                    android:id="@+id/bl_bq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bgrq" />

                <TextView
                    android:id="@+id/bl_bgrq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_blh" />

                <TextView
                    android:id="@+id/bl_blh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bglb" />

                <TextView
                    android:id="@+id/bl_bglb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_kdks" />

                <TextView
                    android:id="@+id/bl_kdks"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_kdys" />

                <TextView
                    android:id="@+id/bl_kdys"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_kdrq" />

                <TextView
                    android:id="@+id/bl_kdrq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bbmc" />

                <TextView
                    android:id="@+id/bl_bbmc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_lczd" />

                <TextView
                    android:id="@+id/bl_lczd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_blzd" />

                <TextView
                    android:id="@+id/bl_blzd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_bgys" />

                <TextView
                    android:id="@+id/bl_bgys"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="@string/bl_shys" />

                <TextView
                    android:id="@+id/bl_shys"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_left_half"
                    android:layout_weight="6"
                    android:text="@string/temp_test"
                    android:textColor="@color/text_darkgreen" />
            </LinearLayout>
</LinearLayout>
    </ScrollView>

</LinearLayout>